clusters/cluster/apps/verein-int/hedgedoc/deployment-override.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hedgedoc
  namespace: verein-int
spec:
  template:
    spec:
      containers:
      - name: hedgedoc
