clusters/cluster/apps/verein-int/hedgedoc/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hedgedoc
  namespace: verein-int
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pad.eggl.one
      secretName: neuland-app-wildcard-tls
  rules:
    - host: pad.eggl.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hedgedoc
                port:
                  number: 3000
